# prototypes

./: .gitignore
agent-first-architecture-transition-cost-asymmetry-and-escalation-quality/: BUILD_LOG.md  README.md  STATUS.md  agent_engine.py  comparator.py  dashboard.html  main.py  pyproject.toml  scenarios.py  server.py  spec.md  test_dashboard.py  workflow_engine.py
agent-platformization-control-plane-and-tool-composition-infra/: BUILD_LOG.md  main.py  pyproject.toml  spec.md
agent-token-waste-analyzer/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  pyproject.toml  run.py
agentic-coding-workspace/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  app.js  index.html  mock-data.js  package-lock.json  package.json  render.js  style.css  test.js
ai-code-change-tracker/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  pyproject.toml
ai-code-change-tracker/impact_track/: ast_analyzer.py  cli.py  diff_parser.py  display.py  impact_graph.py  spec_checker.py
ai-code-change-tracker/sample_project/: api.py  models.py  services.py  spec.md
ai-code-context-bridge/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  pyproject.toml  test_mcp.py
ai-code-context-bridge/sample_project/: CLAUDE.md  architecture-flowchart.mmd  architecture.mmd  mapping.json
ai-code-context-bridge/src/context_bridge/: claude_md_gen.py  cli.py  demo.py  intent_hook.py  mapper.py  mcp_server.py  mermaid_parser.py
ai-code-perf-verifier/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  demo.sh  pyproject.toml
ai-code-perf-verifier/perf_verify/: ast_analyzer.py  benchmarker.py  cli.py  diff_parser.py  reporter.py
ai-code-perf-verifier/sample_project/: algorithms.py
ai-code-perf-verifier/sample_project/tests/: test_algorithms.py
ci-yaml-generator/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  package-lock.json  package.json
community-keyword-monitor/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  db.py  main.py  pyproject.toml  reddit_collector.py  rss_collector.py  server.py  test_browser.py
doc-structure-converter/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  package-lock.json  package.json
embedding-migration-guard/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  main.py  pyproject.toml
embedding-migration-guard/emg/: __init__.py  cli.py  comparator.py  embedder.py  report.py  sample_corpus.py
indie-ops-dashboard/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  analyzer.py  collector.py  database.py  pyproject.toml  seed_data.py  server.py  test_e2e.py  test_screenshot.py  uptime.py
llm-context-debugger/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  dashboard.html  proxy.py  pyproject.toml  store.py  test_dashboard.py  token_counter.py
local-agent-mesh/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  main.py  pyproject.toml
local-agent-resource-planner/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  create_test_gguf.py  gguf_parser.py  index.html  main.py  planner.py  pyproject.toml  server.py  test_browser.py  vram_calculator.py
local-coding-agent-stabilizer/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  analyzer.py  dashboard.html  db.py  demo.sh  loop_detector.py  main.py  proxy.py  pyproject.toml  test_dashboard.py  test_scenarios.py
local-first-data-guard/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  index.html  package-lock.json  package.json  test-core.mjs  test-criteria.mjs  test-demo.mjs  tsconfig.json
local-llm-qual-probe/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  pyproject.toml
local-llm-qual-probe/llm_qual_probe/: cli.py  client.py  reporter.py
local-llm-qual-probe/llm_qual_probe/probes/: efficiency.py  multiturn.py  structured.py
local-llm-serve-guard/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  config.yaml  main.py  pyproject.toml  test_admission.py  test_integration.py  (+1 more)
long-context-consistency/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  pyproject.toml
long-context-consistency/consistency/: checker.py  cli.py  context.py  db.py  extractor.py
long-context-consistency/sample_data/: chapter1.txt  chapter2.txt  chapter3.txt
oss-search-guard/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  pyproject.toml
oss-search-guard/oss_search_guard/: analyzer.py  cli.py  github_parser.py  reporter.py  searcher.py
rag-doc-cleaner/: BUILD_LOG.md  README.md  STATUS.md  generate_samples.py  pyproject.toml
rag-doc-cleaner/src/rag_doc_cleaner/: __init__.py  chunker.py  cleaner.py  cli.py  detector.py  extractor.py
runtime-debug-bridge/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  pyproject.toml
runtime-debug-bridge/examples/: buggy_app.py  e2e_demo.py  mcp_config.json
runtime-debug-bridge/rdb/: __init__.py  capture.py  cli.py  mcp_server.py  procinfo.py  proxy.py  storage.py
sql-ci-static-guard/: .gitignore  .pre-commit-config.yaml  BUILD_LOG.md  README.md  STATUS.md  pyproject.toml
sql-ci-static-guard/samples/: clean.sql  mysql_bad.sql  postgres_bad.sql  snowflake_bad.sql
sql-ci-static-guard/sql_guard/: analyzer.py  cli.py  rules.py
vibe-code-decay-detector/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  create_test_repo.sh  pyproject.toml
vibe-code-decay-detector/decay_detect/: cli.py  dependency_parser.py  git_analyzer.py  metrics.py  pattern_detector.py  storage.py  visualizer.py
vibe-code-prod-audit/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  fastapi_checklist.json  pyproject.toml
vibe-code-prod-audit/sample_project/: main.py
vibe-code-prod-audit/sample_project_good/: main.py  test_main.py
vibe-code-prod-audit/vibe_audit/: __init__.py  checklist.py  cli.py  generator.py  scanner.py
web-health-guard/: .gitignore  BUILD_LOG.md  README.md  STATUS.md  e2e_test.py  main.py  phantom_detector.py  pyproject.toml  robots_analyzer.py  seo_checker.py
web-health-guard/static/: index.html
(+108 files in other folders)
