[project]
name = "impact-track"
version = "0.1.0"
description = "AI Code Change Impact Tracker — tree-sitter AST + git diff 기반 코드 변경 영향 추적기"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "typer>=0.24.1",
]

[project.scripts]
impact-track = "impact_track.cli:app"

[tool.setuptools.packages.find]
include = ["impact_track*"]
