[project]
name = "ai-code-context-bridge"
version = "0.1.0"
description = "Architecture context bridge for AI coding agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "mcp>=1.26.0",
]

[project.scripts]
context-bridge = "context_bridge.cli:main"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_bridge"]
