[project]
name = "ai-code-perf-verifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
]

[tool.setuptools.packages.find]
include = ["perf_verify*"]

[project.scripts]
perf-verify = "perf_verify.cli:main"
