[project]
name = "local-coding-agent-stabilizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
]
