[project]
name = "rdb"
version = "0.1.0"
description = "Runtime Debug Bridge — MCP-based runtime context inspector for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[tool.uv]
package = true

[tool.uv.sources]

[project.scripts]
rdb = "rdb.cli:main"
