[project]
name = "sql-ci-static-guard"
version = "0.1.0"
description = "sqlglot AST-based SQL anti-pattern detector for CI pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "sqlglot>=29.0.1",
]

[project.scripts]
sql-guard = "sql_guard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sql_guard"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
