[project]
name = "decay-detect"
version = "0.1.0"
description = "Git history-based architecture decay detector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "rich>=14.3.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
decay-detect = "decay_detect.cli:main"
