[project]
name = "vibe-audit"
version = "0.1.0"
description = "Production readiness audit for vibe-coded FastAPI projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vibe-audit = "vibe_audit.cli:main"
